Update min_beg.tex, min_ubeg.tex, and 4 more files...

--- a/fig/tikz/min_ubeg.tex
+++ b/fig/tikz/min_ubeg.tex
@@ -23,6 +23,6 @@
 
 \end{axis}
 \end{tikzpicture}
-\caption{Betingelserne, der danner løsningsmængden, markeret med blå, for minimeringsproblemet.}
+\caption{Betingelserne, der danner ubegrænset løsningsmængden, markeret med blå, for minimeringsproblemet.}
 \label{fig:min_ubeg}
 \end{figure}
