--- a/incl/main/linear_optimeringsproblemer/generalt.tex
+++ b/incl/main/linear_optimeringsproblemer/generalt.tex
@@ -5,7 +5,7 @@ Funktionen som optimeres for kaldes \textbf{objektfunktionen}.
 Objektfunktionen kan enten optimeres for maksimum eller minimum og er begrænset af de lineære betingelser.
 Findes der et maksimum eller minimum inde for begrænsningerne kaldes dette for den problemets optimale værdi.
 \\\\
-Et generelt lineært maksimeringsproblem kan opstilles som følgende:
+Et generelt lineært maksimumsproblem kan opstilles som følgende:
 %
 \begin{align*}
 \begin{array}{lrll}
@@ -25,7 +25,7 @@ Hvis mulighedsområdet er uendeligt stor kaldes optimeringsproblemet for \textbf
 Ellers kaldes det \textbf{begrænset}.\\\\
 %
 \begin{eks}
-Betragt minimeringsproblem
+Betragt minimumsproblem
 %
 \begin{align*}
 \begin{array}{lrrlr}
@@ -38,14 +38,14 @@ Betragt minimeringsproblem
 \end{array}
 \end{align*}
 %
-På figur \ref{fig:min_beg} kan løsningsområdet, markeret med blå, for minimeringsproblemet ses.
+På figur \ref{fig:min_beg} kan løsningsområdet, markeret med blå, for minimumsproblemet ses.
 %
 \input{fig/tikz/min_beg}
 \noindent
 %
 Med udgangspunkt i figur \ref{fig:min_beg} kan det ses, at løsningsmængden er begrænset.
 % 
-Havde minimeringsproblemet istedet set ud som følgende: 
+Havde minimumsproblemet i stedet set ud som følgende: 
 %
 \begin{align*}
 \begin{array}{lrrlr}
@@ -55,8 +55,8 @@ Havde minimeringsproblemet istedet set ud som følgende:
 					&x_1&					&\geq	& 0,
 \end{array}
 \end{align*}
-havde minimeringsproblemet været ubegrænset, da $x_1$ og $x_2$ kunne blive uendelig store. 
-Løsningsområdet for minimeringsproblemet ses på figur \ref{fig:min_ubeg}, hvor det er markeret med blå.
+havde minimumsproblemet været ubegrænset, da $x_1$ og $x_2$ kunne blive uendelig store. 
+Løsningsområdet for minimumsproblemet ses på figur \ref{fig:min_ubeg}, hvor det er markeret med blå.
 %
 \input{fig/tikz/min_ubeg}
 %
