--- a/fig/tikz/min_beg.tex
+++ b/fig/tikz/min_beg.tex
@@ -28,6 +28,6 @@
 
 \end{axis}
 \end{tikzpicture}
-\caption{Betingelserne, der danner løsningsmængden, markeret med blå, for minimeringsproblemet.}
+\caption{Betingelserne, der danner begrænset løsningsmængden, markeret med blå, for minimeringsproblemet.}
 \label{fig:min_beg}
 \end{figure}
