Update linear_uafhangighed.tex, gauss_elimination.tex, and 4 more files...

--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination.tex
@@ -63,9 +63,9 @@ x_1 & x_2 & x_3 & x_4 & x_5 & b \\
 \begin{blockarray}{ccccccc}
 x_1 & x_2 & x_3 & x_4 & x_5 & b \\
 \begin{block}{[ccccc|c]c}
-  1 & 0 & -1 & -2 & -8 & -3 \\
-  0 & 0 & -1 & -2 & -7 & -1 \\
-  0 & 0 & 0 & 1 & 2 & -1 \\
+  \hlight{1} & 0 & -1 & -2 & -8 & -3 \\
+  0 & 0 & \hlight{-1} & -2 & -7 & -1 \\
+  0 & 0 & 0 & \hlight{1} & 2 & -1 \\
 \end{block}
 \end{blockarray}
 \end{equation*}
@@ -101,9 +101,9 @@ x_1 & x_2 & x_3 & x_4 & x_5 & b \\
 \begin{blockarray}{ccccccc}
 x_1 & x_2 & x_3 & x_4 & x_5 & b \\
 \begin{block}{[ccccc|c]c}
-  1 & 0 & 0 & 0 & -1 & -2 \\
-  0 & 0 & 1 & 0 & 3 & 3 \\
-  0 & 0 & 0 & 1 & 2 & -1 \\
+  \hlight{1} & 0 & 0 & 0 & -1 & -2 \\
+  0 & 0 & \hlight{1} & 0 & 3 & 3 \\
+  0 & 0 & 0 & \hlight{1} & 2 & -1 \\
 \end{block}
 \end{blockarray}
 \end{equation*}
@@ -182,9 +182,9 @@ Med udgangspunkt i matrix $A$ på reduceret trappeform fra eksempel \ref{eks_gau
 A=\begin{blockarray}{ccccccc}
 x_1 & x_2 & x_3 & x_4 & x_5 & b \\
 \begin{block}{[ccccc|c]c}
-  1 & 0 & 0 & 0 & -1 & -2 \\
-  0 & 0 & 1 & 0 & 3 & 3 \\
-  0 & 0 & 0 & 1 & 2 & -1 \\
+  \hlight{1} & 0 & 0 & 0 & -1 & -2 \\
+  0 & 0 & \hlight{1} & 0 & 3 & 3 \\
+  0 & 0 & 0 & \hlight{1} & 2 & -1 \\
 \end{block}
 \end{blockarray},
 \end{align*}
@@ -233,9 +233,9 @@ Med udgangspunkt i eksempel \ref{eks_gauss} ses derfor, at $A$ er konsistent, da
 B=\begin{blockarray}{ccccccc}
 x_1 & x_2 & x_3 & x_4 & x_5 & b \\
 \begin{block}{[ccccc|c]c}
-  1 & 0 & 0 & 0 & -1 & -2 \\
-  0 & 0 & 1 & 0 & 3 & 3 \\
-  0 & 0 & 0 & 0 & 0 & -1 \\
+  \hlight{1} & 0 & 0 & 0 & -1 & -2 \\
+  0 & 0 & \hlight{1} & 0 & 3 & 3 \\
+  0 & 0 & 0 & 0 & 0 & \hlight{-1} \\
 \end{block}
 \end{blockarray},
 \end{align*}
