--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
@@ -176,10 +176,10 @@ A=
 \begin{blockarray}{ccccc}
 x_1 & x_2 & x_3 & x_4 & b \\
 \begin{block}{[cccc|c]}
-1 & 0 & 5 & 0 & 0\\
-0 & 1 & 3 & 0 & 0\\
-0 & 0 & 0 & 1 & 0\\
-0 & 0 & 0 & 0 & 1\\
+\hlight{1} & 0 & 5 & 0 & 0\\
+0 & \hlight{1} & 3 & 0 & 0\\
+0 & 0 & 0 & \hlight{1} & 0\\
+0 & 0 & 0 & 0 & \hlight{1}\\
 \end{block}
 \end{blockarray}.
 \end{align*}
