--- a/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
+++ b/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
@@ -383,7 +383,7 @@ x_1 & x_2 & x_3 & b \\
 x_1 & x_2 & x_3 & b \\
 \begin{block}{[ccc|c]}
 \hlight{1} & 0 & -2 & 0\\
-0 & -3 & 9 & 0 \\
+0 & \hlight{-3} & 9 & 0 \\
 0 & 0 & 0 & 0 \\
 \end{block}
 \end{blockarray}
@@ -453,9 +453,9 @@ opstilles koefficientmatricen.
 \xrightarrow{R_3 \rightarrow R_3-R_2}
 \begin{blockarray}{ccccc}
 \begin{block}{[cccc]c}
-  1 & -1 & 3 & 1 \\
-  0 & 4 & -6 & -2 \\
-  0 & 0 & 7 & 7 \\
+  \hlight{1} & -1 & 3 & 1 \\
+  0 & \hlight{4} & -6 & -2 \\
+  0 & 0 & \hlight{7} & 7 \\
 \end{block}
 \end{blockarray} \\
 %
@@ -498,9 +498,9 @@ opstilles koefficientmatricen.
 \xrightarrow{R_1 \rightarrow R_1+R_2}
 \begin{blockarray}{ccccc}
 \begin{block}{[cccc]c}
-  1 & 0 & 0 & -1 \\
-  0 & 1 & 0 & 1 \\
-  0 & 0 & 1 & 1 \\
+  \hlight{1} & 0 & 0 & -1 \\
+  0 & \hlight{1} & 0 & 1 \\
+  0 & 0 & \hlight{1} & 1 \\
 \end{block}
 \end{blockarray}.
 %
