--- a/incl/main/linear_algebra/span/span.tex
+++ b/incl/main/linear_algebra/span/span.tex
@@ -192,8 +192,8 @@ Denne omskrives nu til trappeform
 \begin{blockarray}{ccccc}
 \mathbf{u}_1 & \mathbf{u}_2 & \mathbf{u}_3 & \mathbf{v} \\
 \begin{block}{[ccc|c]c}
-  1 & 1 & 1 & -1 \\
-  0 & -1 & -3 & 4 \\
+  \hlight{1} & 1 & 1 & -1 \\
+  0 & \hlight{-1} & -3 & 4 \\
   0 & 0 & 0 & 0 \\
 \end{block}
 \end{blockarray} 
