--- a/incl/main/linear_algebra/span/under_bas_dim.tex
+++ b/incl/main/linear_algebra/span/under_bas_dim.tex
@@ -9,7 +9,7 @@ En mængde $W$ bestående af vektorer i $\R^n$ er et underrum til $\R^n$ hvis de
 \end{enumerate}
 \end{defn}
 \noindent
-Mængden $\R^n$ er et underrum til sig selv, da summen af enhver 2 vektorer i $\R^n$ tilhører $\R^n$, enhver vektor ganget med en skalar er også i $\R^n$ og $\textbf{0}$ er i $\R^n$. Mængden $\{\textbf{0}\}$ er også et underrum til $\R^n$, og kaldes \textbf{nul-underrummet}.
+Mængden $\R^n$ er et underrum til sig selv, da summen af enhver 2 vektorer i $\R^n$ tilhører $\R^n$, enhver vektor multipliciteret med en skalar er også i $\R^n$ og $\textbf{0}$ er i $\R^n$. Mængden $\{\textbf{0}\}$ er også et underrum til $\R^n$, og kaldes \textbf{nul-underrummet}.
 
 
 \begin{thm}{}{}
