Update generalt.tex and standardform.tex

--- a/incl/main/linear_optimeringsproblemer/generalt.tex
+++ b/incl/main/linear_optimeringsproblemer/generalt.tex
@@ -25,6 +25,7 @@ Hvis mulighedsområdet er uendeligt stor kaldes optimeringsproblemet for \textbf
 Ellers kaldes det \textbf{begrænset}.\\\\
 %
 \begin{eks}
+\label{eks:min_lin}
 Betragt minimumsproblem
 %
 \begin{align*}
