--- a/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
+++ b/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
@@ -239,16 +239,19 @@ Lad
 \begin{bmatrix}
            4 \\
            1 \\
+           1 \\
 \end{bmatrix}
 ,
 \begin{bmatrix}
            -3 \\
            0 \\
+           1 \\
 \end{bmatrix}
 ,
 \begin{bmatrix}
            1 \\
            -2 \\
+           1 \\
 \end{bmatrix}
 \right\}.
 \end{align*}
@@ -261,16 +264,19 @@ x_1+
 \begin{bmatrix}
            4 \\
            1 \\
+           1 \\
 \end{bmatrix}
 + x_2
 \begin{bmatrix}
            -3 \\
            0 \\
+           1 \\
 \end{bmatrix}
 + x_3
 \begin{bmatrix}
            1 \\
            -2 \\
+           1 \\
 \end{bmatrix}
 =0.
 \end{align*}
@@ -285,24 +291,54 @@ x_1 & x_2 & x_3 & b \\
 \begin{block}{[ccc|c]}
 4 & -3 & 1 & 0\\
 1 & 0 & -2 & 0 \\
+1 & 1 & 1 & 0 \\
 \end{block}
 \end{blockarray}
 \xrightarrow[R_2 \rightarrow R_2+(-1R_1)]{R_1 \rightarrow \frac{1}{4}R_1} 
 \begin{blockarray}{cccc}
 x_1 & x_2 & x_3 & b \\ 
 \begin{block}{[ccc|c]}
-1 & \frac{-3}{4} & \frac{1}{4} & 0\\
-0 & \frac{3}{4} & \frac{-9}{4} & 0 \\
+1 & -\frac{3}{4} & \frac{1}{4} & 0\\
+0 & \frac{3}{4} & -\frac{9}{4} & 0 \\
+1 & 1 & 1 & 0 \\
 \end{block}
 \end{blockarray} \\
-\xrightarrow[R_1 \rightarrow R_1+(\frac{3}{4} R_2)]{R_2 \rightarrow \frac{4}{3} \times R_2} 
+\xrightarrow[R_2 \rightarrow \frac{4}{3} \times R_2]{R_3 \rightarrow R_3+(-1R_1)} 
 \begin{blockarray}{cccc}
 x_1 & x_2 & x_3 & b \\
 \begin{block}{[ccc|c]}
-\hlight{1} & 1 & -2 & 0\\
-0 & \hlight{1} & -3 & 0\\
+1 & -\frac{3}{4} & \frac{1}{4} & 0\\
+0 & 1 & -3 & 0\\
+0 & \frac{7}{4} & \frac{3}{4} & 0 \\
 \end{block}
 \end{blockarray}
+\xrightarrow[R_3 \rightarrow \frac{1}{6} \times R_3]{R_3 \rightarrow R_3+(-\frac{7}{4}R_2)} 
+\begin{blockarray}{cccc}
+x_1 & x_2 & x_3 & b \\
+\begin{block}{[ccc|c]}
+1 & \frac{-3}{4} & \frac{1}{4} & 0\\
+0 & 1 & -3 & 0\\
+0 & 0 & 1 & 0 \\
+\end{block}
+\end{blockarray} \\
+\xrightarrow[R_1 \rightarrow R_1+(-\frac{1}{4}R_3)]{R_2 \rightarrow R_2+3R_3} 
+\begin{blockarray}{cccc}
+x_1 & x_2 & x_3 & b \\
+\begin{block}{[ccc|c]}
+1 & \frac{-3}{4} & 0 & 0\\
+0 & 1 & 0 & 0\\
+0 & 0 & 1 & 0 \\
+\end{block}
+\end{blockarray} 
+\xrightarrow[]{R_1 \rightarrow R_1+\frac{3}{4}R_2} 
+\begin{blockarray}{cccc}
+x_1 & x_2 & x_3 & b \\
+\begin{block}{[ccc|c]}
+\hlight{1} & 0 & 0 & 0\\
+0 & \hlight{1} & 0 & 0\\
+0 & 0 & \hlight{1} & 0 \\
+\end{block}
+\end{blockarray} \\
 \end{align*}
 %
 Da totalmatricen ikke har nogle frie variable, har den kun en løsning og er derfor lineært uafhængig.
