--- a/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
+++ b/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
@@ -232,6 +232,7 @@ Hvis der er pivotindgange i alle søjlerne, er mængden af vektorer lineært uaf
 \\\\
 %
 % Eksempel
+% Virker stadig ufærdigt, vi snakker om det. 
 \begin{eks}\label{lineu}
 Lad
 \begin{align*}
