Update dom.tex, Lineaer_afbilding.tex, and 9 more files...

--- a/fig/tikz/dom.tex
+++ b/fig/tikz/dom.tex
@@ -30,7 +30,7 @@
 
 
 	\draw[black, fill=black] (0,-5) circle (0pt) node[anchor=west] {Domæne};
-	\draw[black, fill=black] (6,-5) circle (0pt) node[anchor=west] {Kodomæne};
+	\draw[black, fill=black] (6,-5) circle (0pt) node[anchor=west] {Codomæne};
 	\draw[black, fill=black] (5.5,-2.5) circle (0pt) node[anchor=west] {Billedmængde};    
 	%Streger mellem punkterne
   \end{tikzpicture}
