--- a/incl/main/linear_algebra/linear_algebra.tex
+++ b/incl/main/linear_algebra/linear_algebra.tex
@@ -7,7 +7,7 @@
 	\input{incl/main/linear_algebra/matricer_vektorer/mxtrans.tex}
 	\input{incl/main/linear_algebra/matricer_vektorer/linearkom.tex}
 	\input{incl/main/linear_algebra/matricer_vektorer/mxmulti.tex}
-	\input{incl/main/linear_algebra/matricer_vektorer/mxinvers.tex}
+	
 	
 	% Lineære ligningssystemer
 	\input{incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer}
@@ -17,8 +17,11 @@
 	\input{incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination}
 	% Span
 	\input{incl/main/linear_algebra/span/span}
-	\input{incl/main/linear_algebra/span/under_bas_dim}
 	% Lineær uafhængighed
 	\input{incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed}
 	\input{incl/main/linear_algebra/lineaer_afbilding}
+	% Inversematricer
+	\input{incl/main/linear_algebra/matricer_vektorer/mxinvers.tex}
 	\input{incl/main/linear_algebra/invertibilitet}
+	% Underrum
+	\input{incl/main/linear_algebra/span/under_bas_dim}
