--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination.tex
@@ -199,7 +199,7 @@ Følgende udsagn er ækvivalente:
 \begin{enumerate}[label=(\alph*)]
 \item Matricen $A\mathbf{x}=\mathbf{b}$ er konsistent.
 \item Vektoren $\mathbf{b}$ er en linearkombination af søjlerne i $A$.
-\item Den reducerede trappeform af totalmatricen $[A|\mathbf{b}]$ har ingen rækker på formen $[ 0 \ldots 0 | d  ]$, hvor $d \neq 0$.
+\item Den reducerede trappeform af totalmatricen $[A \text{   }| \text{ }\mathbf{b}]$ har ingen rækker på formen $[ 0 \ldots 0 \text{  }| \text{ } d  ]$, hvor $d \neq 0$.
 \end{enumerate}
 %
 \end{thm}
@@ -209,6 +209,7 @@ Følgende udsagn er ækvivalente:
 Lad $A$ være en $n \times m$ matrix og $\mathbf{b} \in \R^m$. Jævnfør definition \ref{defn:mvp} følger det, at der eksisterer en vektor 
 %
 \begin{align*}
+\mathbf{v}=      
        \mathbf{v} = \begin{bmatrix}
 		v_{1} \\
         v_{2} \\
