--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
@@ -168,6 +168,7 @@ Jævnfør definition \ref{defn:redtrap} er $A$ på reduceret trappeform.
 \textbf{Pivotindgange} betegnes som den første ikke-nulindgang i enhver række i en matrix på trappeform. 
 \end{defn}
 \noindent
+\begin{eks}{}{}
 Betragt eksempel \ref{trappe}. Det ses, at ligningssystemet ikke har nogen løsning, da den fjerde ligning ikke har nogen løsning.\\
 \begin{minipage}{0.5\textwidth}
 %
@@ -193,6 +194,7 @@ x_4&=0\\
 \end{align*}
 \end{minipage}
 %
+\end{eks}
 Hvis der er pivotindgang i den sidste søjle, så har ligningssystemet ingen løsning.
 %
 De variables søjler, der indeholder pivotindgange, kaldes for \textbf{faste variable}, mens de, som ikke indholder pivotindgange, kaldes for \textbf{frie variable}. 
