--- a/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
@@ -207,18 +207,19 @@ A\textbf{u}=
 \end{bmatrix}.
 $$
 \end{eks}
-Et eller andet om hvilke egenskaber matrixvektorprodukt har.
-
+% 
+En række egenskaber ved matrix-vektorprodukt beskrives i sætning \ref{thm:mxvpro}.
+%
 \begin{thm}{}{mxvpro}
-Lad $A$ og $B$ være $m \times n$ matricer, og lad $u$ og $v$ være vektorer i $R^n$. Så gælder at
+Lad $A$ og $B$ være $m \times n$ matricer, og lad $\mathbf{u}, \mathbf{v}$ og $\mathbf{w}$ være vektorer i $R^n$. Så gælder at
 \begin{enumerate}[label=(\alph*)]
 \item $A(\mathbf{u}+\mathbf{v})=A\mathbf{u}+A\mathbf{v}$.
 \item $A(c\mathbf{u})=c(A\mathbf{u})=(cA)\mathbf{u}$ for enhver skalar c.
 \item $(A+B)\mathbf{u}=A\mathbf{u}+B\mathbf{u}$.
-\item $A\mathbf{e}_j=\mathbf{a}_j$ for $j=1,2,\ldots,n$ hvor $\mathbf{e}_j$ er den j'te standardvektor i $R^n$.
-\item Hvis $B$ er en $m \times n$ matrix der opfylder at $B\mathbf{w}=A\mathbf{w}$ for alle $\mathbf{w}$ i $R^n$ så gælder at $B=A$.
+\item $A\mathbf{e}_j=\mathbf{a}_j$ for $j=1,2,\ldots,n$, hvor $\mathbf{e}_j$ er den j'te standardvektor i $R^n$.
+\item Hvis $B$ er en $m \times n$ matrix, der opfylder, at $B\mathbf{w}=A\mathbf{w}$ for alle $\mathbf{w}$ i $R^n$, så gælder, at $B=A$.
 \item $A\mathbf{0}$ er $m \times 1$ nulvektoren.
-\item hvis $O$ er $m \times n$ nulmatricen, så gælder at $O\mathbf{v}$ er $m \times 1$ nulvektoren.
+\item Hvis $O$ er $m \times n$ nulmatricen, så gælder, at $O\mathbf{v}$ er $m \times 1$ nulvektoren.
 \item $I_n\mathbf{v}=\mathbf{v}$.
 \end{enumerate}
 \end{thm}
@@ -228,29 +229,37 @@ Da de i'te komponenter af $\textbf{u}$ og $\textbf{v}$ er henholdsvis $u_i$ og $
 \begin{align*}
 A(\mathbf{u}+\mathbf{v})&=(u_1+v_1)\mathbf{a}_1+(u_2+v_2)\mathbf{a}_2+\cdots + (u_n+v_n)\mathbf{a}_n \\
 &=(u_1\mathbf{a}_1+u_2\mathbf{a}_2+\cdots+u_n\mathbf{a}_n)+(v_1\mathbf{a}_1+v_2\mathbf{a}_2+\cdots+v_n\mathbf{a}_n) \\
-&=A\mathbf{u}+A\mathbf{v}
+&=A\mathbf{u}+A\mathbf{v}.
 \end{align*}
-(b)
+(b) $A(c\mathbf{u})$ kan opskrives som
 \begin{align*}
 A(c \textbf{u})&=\textbf{A}_1(cu_1)+\textbf{A}_2(cu_2) + \cdots + \textbf{A}_n(cu_n) \\
 &=\textbf{A}_1cu_1+\textbf{A}_2cu_2 + \cdots + \textbf{A}_ncu_n \\
-&=c(\textbf{A}_1u_1)+c(\textbf{A}_2u_2)+\cdots+c(\textbf{A}_1u_1)
+&=c(\textbf{A}_1u_1)+c(\textbf{A}_2u_2)+\cdots+c(\textbf{A}_n u_n)
 =c(A \textbf{u}) \\
-&= u_1(c\textbf{A}_1)+u_1(c\textbf{A}_2)+\cdots+u_n(c\textbf{A}_n)=\textbf{u}(Ac)
+&=(c\textbf{A}_1)u_1+(c\textbf{A}_2)u_2+\cdots+(c\textbf{A}_n)u_n=(cA)\textbf{u}.
 \end{align*}
-(c)
+%
+(c) $(A+B)\mathbf{u}$ opskrives som
+%
 \begin{align*}
 (A+B)\textbf{u}&=(\textbf{A}_1+\textbf{b}_1)u_1 +(\textbf{A}_2+\textbf{B}_2)u_2 \cdots (\textbf{A}_n+\textbf{B}_n)u_n \\
 &=(\textbf{A}_1u_1+\textbf{A}_2u_2+ \cdots + \textbf{A}_nu_n)+(\textbf{B}_1u_1+\textbf{B}_2u_2+ \cdots + \textbf{B}_nu_n) \\
-&=A\textbf{u}+B\textbf{u}
+&=A\textbf{u}+B\textbf{u}.
 \end{align*}
-(d)
-Den $a_j$'te søjle multipliceres med $1$, mens de resterende multipliceres med $0$. 
-Derfor er resultatet af $A\mathbf{e}_j=\mathbf{a}_j$ \\\\
-(e)
+(d) 
+Søjlen $\mathbf{a}_j$ multipliceres med $1$, mens de resterende multipliceres med $0$. 
+Derfor er resultatet af $A\mathbf{e}_j=\mathbf{a}_j.$
+\\\\
+% Denne align skal eventuelt skrives om xD
+(e) Lad  $B\mathbf{w}=A\mathbf{w}$ for alle $\mathbf{w} \in \R^n$.
+Så gælder det, at $B=A$, da
+%
 \begin{align*}
-B\textbf{w}&=A\textbf{w} \rightarrow\\  \frac{\textbf{b}_1u_1+\textbf{b}_2u_2+\cdots+\textbf{b}_nu_n}{u_1+u_2+\cdots+u_n} &=\frac{\textbf{a}_1u_1+\textbf{a}_2u_2+\cdots+\textbf{a}_nu_n}{u_1+u_2+\cdots+u_n} \rightarrow\\   B&=A 
+\textbf{b}_1w_1+\textbf{b}_2 w_2+\cdots+\textbf{b}_n w_n &=\textbf{a}_1 w_1+\textbf{a}_2 w_2+\cdots+\textbf{a}_n w_n \rightarrow\\   
+B&=A.
 \end{align*}
+% \frac{\textbf{b}_1w_1+\textbf{b}_2 w_2+\cdots+\textbf{b}_n w_n}{w_1+ w_2+\cdots+ w_n} &=\frac{\textbf{a}_1 w_1+\textbf{a}_2 w_2+\cdots+\textbf{a}_n w_n}{w_1+ w_2+\cdots+ w_n} \rightarrow\\  
 (f)
 Dette kan opskrives som
 \begin{align*}
@@ -270,6 +279,6 @@ $$
 1v_n  \\
 \end{bmatrix}.
 $$
-Det følger derfor, at $I_n\mathbf{v}=v$.\\
+Det følger derfor, at $I_n\mathbf{v}=v$.
 Således er alle punkter i sætning \ref{thm:mxvpro} bevist. 
 \end{proof}
