--- a/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
@@ -3,15 +3,16 @@ At multiplicere en matrix $A$ med en $n \times n$ \textbf{elementær matrix} $E$
 Dermed kan enhver rækkeoperation udføres gennem matrixmultiplikation. 
 En $n \times n$ matrix $E$ er elementær, hvis én rækkeoperation udført på $I_n$ resulterer i $E$. 
 %Eksempel? 
-
+\\\\
 Lad nu $A$ være en $m \times n$ matrix og $E$ en elementær $m \times m$ matrix, der er resultatet af én rækkeoperation udført på $I_m$. 
 Matrixproduktet $EA$ kan opnås ved at udføre én rækkeoperation på $A$. 
 Enhver elementær matrix er desuden \textbf{invertibel}, og dens \textbf{invers} er også en elementær matrix. 
 %
 \begin{defn}{}{mxinvers}
-En $n \times n$ matrix $A$ er invertibel, hvis en $n \times n$ matrix $B$ eksisterer, så $AB=BA=I_n$. $B$ er i så fald $A$'s invers. 
+En $n \times n$ matrix $A$ er invertibel, hvis en $n \times n$ matrix $B$ eksisterer, så $AB=BA=I_n$. $B=A^{-1}$ er i så fald $A$'s invers. 
 \end{defn}
-Såfremt $A$ er en invertibel $n \times n$ matrix, gælder det for ethvert $B \in \R^n$, at $A\textbf{x}=B$ har den entydige løsning $A^{-1}B$. 
+\noindent
+Såfremt $A$ er en invertibel $n \times n$ matrix, gælder det for ethvert $\mathbf{b} \in \R^n$, at $A\textbf{x}=\mathbf{b}$ har den entydige løsning $A^{-1}\mathbf{b}$. 
 %
 Inverse matricer har en række egenskaber, hvoraf nogle centrale er formuleret i sætning \ref{thm:mxinvers}. 
 %
@@ -26,13 +27,17 @@ Givet to $m \times n$ matricer $A$ og $B$, så gælder, at
 %
 %
 \begin{proof}
-Punkt (a) følger af definition \ref{thm:mxinvers}. 
+(a)
+Udsagnet følger af definition \ref{defn:mxinvers}. 
+\\\\
 (b) Antag, at $A$ og $B$ er invertibel matricer, så $(AB)(B^{-1}A^{-1})=A(BB^{-1})A^{-1}=AI_nA^{-1}=AA^{-1}=I_n$. 
 Det kan gennem lignende operationer vises at $(B^{-1}A^{-1})(AB)=I_n$.
-Dermed er $AB$ en invertibel matrix, hvis invers er $A^{-1}B^{-1}$ altså er $AB^{-1}=A^{-1}B^{-1}$.
+Dermed er $AB$ en invertibel matrix, hvis invers er $A^{-1}B^{-1}$.
+Dermed er $AB^{-1}=A^{-1}B^{-1}$.
+\\\\
 (c) Antag at A er invertibel. 
 Det følger fra definition \ref{defn:mxinvers}, at $A^{-1}A=I_n$. 
-Fra punkt (g) i sætning \ref{thm:mxmulti} følger det hermed, at $A^T(A^{-1})^T=(A^{-1}A)^T=I_n^T=I_n$. 
+Jævnfør sætning punkt (g) i  \ref{thm:mxmulti} følger det hermed, at $A^T(A^{-1})^T=(A^{-1}A)^T=I_n^T=I_n$. 
 Ligeledes kan det vises, at $(A^{-1})^TA^T=I_n$. 
 Derfor er $A^T$ en invertibel matrix med inversen $(A{-1})^T$ og $(A^T)^{-1}A=(A^{-1})^T$.
 \end{proof}
@@ -45,64 +50,59 @@ Så eksisterer der en invertibel $m \times n$ matrix $P$, så $PA=R$.
 \end{thm}
 %
 \begin{proof}
-Lad $P$ være en invertibel matrix, så 
-$
-\begin{bmatrix}
-A & \textbf{b}
-\end{bmatrix}
-=
-\begin{bmatrix}
-R & \textbf{c}
-\end{bmatrix}
-$.
-Så gælder der, at 
-$$
-\begin{bmatrix}
-PA & P\textbf{b}
-\end{bmatrix}
-=P
-\begin{bmatrix}
-A & \textbf{b}
-\end{bmatrix}
-=
-\begin{bmatrix}
-R & \textbf{c}
-\end{bmatrix}
-\text{, }
-$$
-hvormed $PA=R$ og $P\textbf{b}=\textbf{c}$.
-Heraf følger, at $A=P^{-1}R$ og $\textbf{b}=P^{-1}\textbf{c}$, da $P$ er invertibel. 
-
-Antag, at $\textbf{v}$ er en løsning til $A\textbf{x}=\textbf{b}$. Så er
-$$
-R\textbf{v}=(PA)\textbf{v}=P(A\textbf{v})=P\textbf{b}=\textbf{c},
-$$
-hvormed $\textbf{v}$ er en løsning til $R\textbf{x}=\textbf{c}$. 
-Antag nu i stedet, at $\textbf{v}$ er en løsning til $R\textbf{x}=\textbf{c}$. Så er
-$$
-A\textbf{v}=(P^{-1}R)\textbf{v}=P^{-1}(R\textbf{v})=P^{-1}\textbf{c}=\textbf{b},
-$$
-hvormed $\textbf{v}$ er en løsning til $A\textbf{x}=b$. Dermed er det bevist, at $A\textbf{x}=b$ og $R\textbf{x}=c$ har samme løsning.
+\textbf{Beviset kommer senere }
 \end{proof}
 %
-\noindent
+\\
 Sætning \ref{thm:eleinv} medfører desuden korollar \ref{kor:eleinv}.
 %måske noget mere her (at det er vigtigt for rækkeoperationer?).  
 \begin{kor}{}{eleinv}
 Matrixligningerne $A\textbf{x}=\textbf{b}$ og $R\textbf{x}=\textbf{c}$ har samme løsninger, hvor 
-$
-\begin{bmatrix}
-R & \textbf{c}
-\end{bmatrix}
-$
+$[R \text{   }| \textbf{c}]$
 er den reducerede trappeform af den udvidede matrix 
+$[A \text{   }| \textbf{b}].
 $
-\begin{bmatrix}
-A & \textbf{b}
-\end{bmatrix}
-$.
 \end{kor}
-Beviset for korollar \ref{kor:eleinv} følger af beviset for sætning \ref{thm:eleinv} med tilføjelsen, at hvis $\textbf{b}=\textbf{0}$, så er $\textbf{c}=\textbf{0}$, hvilket resulterer i nulvektoren i begge udtryk. 
+%
+%\begin{proof}
+%Lad $P$ være en invertibel matrix, så 
+%$P[A \text{   }| \textbf{b}]
+%=
+%[R \text{   }| \textbf{c}]
+%$.
+%Så gælder det, at 
+%$$
+%P
+%\begin{bmatrix}
+%A & \textbf{b}
+%\end{bmatrix}
+%=
+%\begin{bmatrix}
+%PA & P\textbf{b}
+%\end{bmatrix}
+%=
+%\begin{bmatrix}
+%R & \textbf{c}
+%\end{bmatrix}
+%\text{, }
+%$$
+%hvormed $PA=R$ og $P\textbf{b}=\textbf{c}$.
+%Heraf følger, at $A=P^{-1}R$ og $\textbf{b}=P^{-1}\textbf{c}$, da $P$ er invertibel. 
+%\\\\
+%Antag, at $\textbf{v}$ er en løsning til $A\textbf{x}=\textbf{b}$. Så er
+%$$
+%R\textbf{v}=(PA)\textbf{v}=P(A\textbf{v})=P\textbf{b}=\textbf{c},
+%$$
+%hvormed $\textbf{v}$ er en løsning til $R\textbf{x}=\textbf{c}$. 
+%Antag nu i stedet, at $\textbf{v}$ er en løsning til $R\textbf{x}=\textbf{c}$. Så er
+%$$
+%A\textbf{v}=(P^{-1}R)\textbf{v}=P^{-1}(R\textbf{v})=P^{-1}\textbf{c}=\textbf{b},
+%$$
+%hvormed $\textbf{v}$ er en løsning til $A\textbf{x}=b$. 
+%Dermed er det bevist, at $A\textbf{x}=b$ og $R\textbf{x}=c$ har samme løsning.
+%%Beviset for korollar \ref{kor:eleinv} følger af beviset for sætning \ref{thm:eleinv} med tilføjelsen, at hvis $\textbf{b}=\textbf{0}$, så er $\textbf{c}=\textbf{0}$, hvilket resulterer i nulvektoren i begge udtryk.
+%\end{proof}
+%\\
 %
 %
 %HER SAD DEF 3.8 FØR
@@ -115,14 +115,14 @@ $A$ er invertibel, hvis og kun hvis den reducerede trappeform af $A$ er $I_n$.
 \end{thm}
 %
 \begin{proof}
-$\rightarrow$ Antag, at $n\times n$ matricen $A$ er invertibel, og at der findes en vektor \textbf{v} i $R^n$, så $A\textbf{v}=\textbf{0}$. 
-Deraf følger, at $\textbf{v}=A^{-1}\textbf{0}=\textbf{0}$. Da $A$ er en invertibel matrix, gælder det for ethvert $B \in \R^n$, at $A\textbf{x}=B$ har løsningen $A^{-1}B$ og derfor er $\textbf{v}=A^{-1}\textbf{0}=\textbf{0}$. 
+Antag, at $n\times n$ matricen $A$ er invertibel, og at der findes en vektor \textbf{v} i $\R^n$, så $A\textbf{v}=\textbf{0}$. 
+Da $A$ er en invertibel matrix, gælder det for ethvert $\mathbf{b} \in \R^n$, at $A\textbf{x}=\mathbf{b}$ har løsningen $A^{-1}\mathbf{b}$ og derfor er $\textbf{v}=A^{-1}\textbf{0}=\textbf{0}$. 
 Den eneste løsning til problemet er derfor $\textbf{0}$. 
-Såfremt $A$ er invertibel, følger det derfor fra sætning \ref{thm:mxlinuaf}, at $rank(A)=n$.
+Såfremt $A$ er invertibel, følger det derfor fra sætning \ref{thm:mxlinuaf}, at $\text{ rang}(A)=n$.
 Det følger derfor, at $A$ på reduceret trappeform er $I_n$.
-$\leftarrow$
+\\\\
 Antag nu, at den reducerede trappeform af $A$=$I_n$. 
-Så følger det fra sætning \ref{thm:mxinvertibel}, at der eksister en invertibel $n \times n$ matrix $P$, hvorom det gælder, at $PA=I_n$. 
+Jævnfør sætning \ref{thm:mxinvertibel} eksister der en invertibel $n \times n$ matrix $P$, hvorom det gælder, at $PA=I_n$. 
 %
 \begin{align*}
 A=I_nA=(P^{-1}P)A=P^{-1}(PA)=P^{-1}.
@@ -132,27 +132,23 @@ Fra sætning \ref{thm:mxinvers} fremgår det, at $P^{-1}$ er en invertibel matri
 \end{proof}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %find begin example
-\\\\
+\\
 Det er fordelagtigt at benytte algoritmer til at invertere matricer. Lad $A$ være en $n \times n$ matrix. 
 Givet et input
-$
-\begin{bmatrix}
-A & I_n
-\end{bmatrix}
+$[A \text{   } I_n].
 $
 skal algoritmen udføre elementære rækkeoperationer på $A$, således algoritmens output bliver
-$
-\begin{bmatrix}
-R & B
-\end{bmatrix}
+$[R \text{   } B].
 $,
 hvor $R$ er $A$ på reduceret trappeform. 
 Hvis $R=I_n$, er $A$ invertibel og $B=A^{-1}$.
 Hvis $R \neq I_n$, er $A$ ikke invertibel. 
 %
 % 
+\\
 \begin{eks}
-Givet en matrix $A$ ønskes at finde dennes invers $A^{-1}$.
+\label{eks:fisk5}
+Lad
 \begin{align*}
 A=\begin{blockarray}{ccc}
 \begin{block}{[ccc]}
@@ -160,22 +156,22 @@ A=\begin{blockarray}{ccc}
 1 & 2 & 2  \\
 1 & 3 & 2  \\
 \end{block}
-\end{blockarray}
+\end{blockarray}.
 \end{align*}
-Denne opskrives nu i totalmatricen $[A I_3]$
+%
+For at finde dennes invers $A^{-1}$ opstilles totalmatricen 
 \begin{align*}
-A=\begin{blockarray}{cccccc}
+[A \text{   } | \text{ } I_3] =\begin{blockarray}{cccccc}
 \begin{block}{[ccc|ccc]}
 1 & 1 & 1 & 1 & 0 & 0 \\
 1 & 2 & 2 & 0 & 1 & 0 \\
 1 & 3 & 2 & 0 & 0 & 1 \\
 \end{block}
-\end{blockarray}
+\end{blockarray}.
 \end{align*}
 Ved at udføre rækkeoperationer omdannes $A$ til reduceret trappeform.
-
 \begin{align*}
-A= &
+[A \text{   } | \text{ } I_3] = &
 \begin{blockarray}{cccccc}
 \begin{block}{[ccc|ccc]}
 1 & 1 & 1 & 1 & 0 & 0 \\
@@ -230,21 +226,22 @@ A= &
 0 & 1 & 0 & 0 & -1 & 1 \\
 0 & 0 & 1 & -1 & 2 & -1 \\
 \end{block}
-\end{blockarray}
+\end{blockarray}.
 \end{align*}
 Det fremgår derfor, at $A$ er invertibel, da dens reducerede trappeform er $I_3$. $B$-siden, hvor $I_3$ før var, er nu
 \begin{align*}
-B=\begin{blockarray}{ccc}
+B=A^{-1}=\begin{blockarray}{ccc}
 \begin{block}{[ccc]}
 2 & -1 & 0 \\
 0 & -1 & 1 \\
 -1 & 2 & -1 \\
 \end{block}
-\end{blockarray}=A^{-1}
+\end{blockarray}.
 \end{align*}
+%
 \end{eks}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-Sætning \ref{thm:mxinvers2} redegør for nogle yderligere egenskaber for invertible matricer. 
+Sætning \ref{thm:mxinvers2} beskriver nogle yderligere egenskaber for invertible matricer. 
 %
 \begin{thm}{}{mxinvers2}
 %Givet to $m \times n$ matricer $A$ og $B$, så gælder, at (det er bare leftover aye?)
@@ -253,12 +250,12 @@ Da er følgende udsagn ækvivalente.
 \begin{enumerate}[label=(\alph*)]
 \item $A$ er invertibel.
 \item Den reducerede trappeform af $A$ er $I_n$.
-\item rang$(A)=n$.
+\item $\text{rang}(A)=n$.
 \item Spannet af søjlerne i $A$ er $R^n$.
-\item ligningssystemet $A\textbf{x}=\textbf{b}$ er konsistent for alle $\textbf{b}$ i $R^n$.
-\item null$(A)$=0.
+\item Ligningssystemet $A\textbf{x}=\textbf{b}$ er konsistent for alle $\textbf{b}$ i $R^n$.
+\item $\text{null}(A)=0$.
 \item Søjlerne i $A$ er lineært uafhængige.
-\item Den eneste løsning for $A\textbf{x}=\textbf{O}$ er $\textbf{O}$.
+\item Den eneste løsning for $A\textbf{x}=\textbf{0}$ er $\textbf{0}$.
 \item Der eksisterer en $n \times n$ matrix $B$, så $BA=I_n$.
 \item Der eksister en $n \times n$ matrix $C$, så $AC=I_n$.
 \item $A$ er et produkt af elementære matricer.
@@ -271,26 +268,26 @@ Jævnfør sætning \ref{thm:mxinvertibel} er (a) og (b) ækvivalente.
 Da $A$ er kvadratisk, er (b) ligeledes ækvivalent med (c), (d) og (e) jævnfør sætning \ref{thm:spaneqv}. 
 Jævnfør sætning \ref{thm:mxlinuaf} er (b) desuden ækvivalent med (f), (g) og (h). 
 Eftersom (a) er ækvivalent med (b), er (a) også ækvivalent med (c), (d), (e), (f), (g) og (h). 
-
+\\\\
 At (a) og (k) er ækvivalente, bevises i to skridt. 
-(1) Bemærk, at hvis $A$ er invertibel, så er $I_n$ er den reducerede trappeform af $A$. 
+Bemærk først, at hvis $A$ er invertibel, så er $I_n$ den reducerede trappeform af $A$. 
 Jævnfør sætning \ref{thm:eleinv} og \ref{thm:mxinvertibel} eksisterer der en invertibel matrix $P$, så at $PA=I_n$, hvormed $A=P^{-1}$. 
 Da $P=E_kE_{k-1} \cdots E_1$, så er $P^{-1}=E_1^{-1} \cdots E_{k-1}^{-1}E_k^{-1}$.
-$A$ er dermed et produkt af elementære matricer, hvilket beviser, at (a) medfører (k). \\
-(2) Antag nu, at $A$ er en produkt af elementære matricer. 
+$A$ er dermed et produkt af elementære matricer, hvilket beviser, at (a) medfører (k). \\\\
+Antag nu, at $A$ er et produkt af elementære matricer. 
 Elementære matricer er invertible, hvormed $A$ er et produkt af invertible matricer. 
 $A$ er derfor invertibel, hvilket bekræfter (a), hvilket gør (a) og (k) ækvivalente. 
-
-At (a) medfører (i) er tydeligt, da $B=A^{1}$. 
-Antag nu, at der eksisterer en $n \times n$ matrix $B$, så $BA=I_n$. Lad $\textbf{v} \in \R^n$, så at $A\textbf{v}=\textbf{b}$. Så gælder, at 
+\\\\
+At (a) medfører (i) er åbenlyst, da $B=A^{1}$. 
+Antag nu, at der eksisterer en $n \times n$ matrix $B$, så $BA=I_n$. Lad $\textbf{v} \in \R^n$, så at $A\textbf{v}=\textbf{b}$. Så gælder det, at 
 $$
-\textbf{v} = I_n\textbf{v} = (BA)\textbf{v} = B(A\textbf{v} = B\textbf{0} = \textbf{0}.
+\textbf{v} = I_n\textbf{v} = (BA)\textbf{v} = B(A\textbf{v}) = B\textbf{0} = \textbf{0}.
 $$
 Bemærk, at (i) dermed medfører (h).
 Eftersom (h) er ækvivalent med (a), medfører (i) derfor også (a).
 Således er (i) og (a) ækvivalente. 
-
-At (a) medfører (j) er igen tydeligt, da $C=A^{1}$.
+\\\\
+At (a) medfører (j) er åbenlyst, da $C=A^{1}$.
 Antag nu, at der eksister en $n \times n$ matrix $C$, så $AC=I_n$. 
 Lad $\textbf{b} \in \R^n$ og $\textbf{v}=C\textbf{b}$. 
 Så gælder, at 
@@ -299,7 +296,5 @@ A\textbf{v} = A(C\textbf{b}) = (AC)\textbf{b} = I_n\textbf{b} = \textbf{b}.
 $$
 Bemærk, at (j) dermed medfører (e).
 Eftersom (e) er ækvivalent med (a), medfører (j) derfor også (a).
-Således er (j) og (a) ækvivalente, og alle punkter i sætning \ref{thm:mxinvers2} er dermed bevist ækvivalente.
+Således er (j) og (a) ækvivalente, og alle punkter i sætning \ref{thm:mxinvers2} er dermed ækvivalente.
 \end{proof}
-
-
