--- a/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
@@ -1,4 +1,4 @@
-\subsection{Elementære og inverse matricer}
+\section{Elementære og inverse matricer}
 At multiplicere en matrix $A$ med en $n \times n$ \textbf{elementær matrix} $E$ svarer til at udføre én rækkeoperation på $A$. 
 Dermed kan enhver rækkeoperation udføres gennem matrixmultiplikation. 
 En $n \times n$ matrix $E$ er elementær, hvis én rækkeoperation udført på $I_n$ resulterer i $E$. 
