Update linear_uafhangighed.tex, loesning_til_lineaer.tex, and mxinvers.tex

--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
@@ -140,7 +140,7 @@ En matrix er på \textbf{reduceret trappeform}, hvis den opfylder følgende krit
 \end{enumerate}
 \end{defn}
 \noindent
-Et lineært ligningssystem, som ikke står på trappeform, kan laves om til trappeform og derefter reduceret trappeform, hvilket gør løsningen af systemet mere simpel.
+Den reducerede trappeform af en matrix $A$ noteres  $R$. Et lineært ligningssystem, som ikke står på trappeform, kan laves om til trappeform og derefter reduceret trappeform, hvilket gør løsningen af systemet mere simpel.
 Metoden til at gøre dette ses i afsnit \ref{gauss}.
 \\
 %
@@ -168,7 +168,8 @@ Jævnfør definition \ref{defn:redtrap} er $A$ på reduceret trappeform.
 \textbf{Pivotindgange} betegnes som den første ikke-nulindgang i enhver række i en matrix på trappeform. 
 \end{defn}
 \noindent
-\begin{eks}{}{}
+Pivot indgange vil fremover blive markeret med blå, som set i eksempel \ref{eks:pivot}. Dette vil blive gjort første gang en matrice bliver lavet til trappeform eller reduceret trappeform.
+\begin{eks}{}{eks:pivot}
 Betragt eksempel \ref{trappe}. Det ses, at ligningssystemet ikke har nogen løsning, da den fjerde ligning ikke har nogen løsning.\\
 \begin{minipage}{0.5\textwidth}
 %
