--- a/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
@@ -198,9 +198,9 @@ Ved at udføre rækkeoperationer omdannes $A$ til reduceret trappeform.
 \xrightarrow{R_3 \rightarrow R_3-2R_2} &
 \begin{blockarray}{cccccc}
 \begin{block}{[ccc|ccc]}
-1 & 1 & 1 & 1 & 0 & 0 \\
-0 & 1 & 1 & -1 & 1 & 0 \\
-0 & 0 & -1 & 1 & -2 & 1 \\
+\hlight{1} & 1 & 1 & 1 & 0 & 0 \\
+0 & \hlight{1} & 1 & -1 & 1 & 0 \\
+0 & 0 & \hlight{-1} & 1 & -2 & 1 \\
 \end{block}
 \end{blockarray}	\\
 \xrightarrow{R_3 \rightarrow -1R_3} &
@@ -222,9 +222,9 @@ Ved at udføre rækkeoperationer omdannes $A$ til reduceret trappeform.
 \xrightarrow{R_1 \rightarrow R_1-R_2} &
 \begin{blockarray}{cccccc}
 \begin{block}{[ccc|ccc]}
-1 & 0 & 0 & 2 & -1 & 0 \\
-0 & 1 & 0 & 0 & -1 & 1 \\
-0 & 0 & 1 & -1 & 2 & -1 \\
+\hlight{1} & 0 & 0 & 2 & -1 & 0 \\
+0 & \hlight{1} & 0 & 0 & -1 & 1 \\
+0 & 0 & \hlight{1} & -1 & 2 & -1 \\
 \end{block}
 \end{blockarray}.
 \end{align*}
