--- a/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
+++ b/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
@@ -182,24 +182,24 @@ Antag, at $\mathbf{u}_1 \neq \mathbf{0}$, da løsningen ellers er triviel.
 Der findes skalarer, hvor variablerne ikke alle er $0$, således at
 % 
 \begin{align*}
-c_1 \mathbf{u}_1 + c_2 \mathbf{u}_2 + \ldots + c_k \mathbf{u}_k = \mathbf{0}.
+x_1 \mathbf{u}_1 + x_2 \mathbf{u}_2 + \ldots + x_k \mathbf{u}_k = \mathbf{0}.
 \end{align*}
 %
-Lad $i$ være det største index $i$, hvor $c_i \neq 0$, sådan at 
+Lad $i$ være det største index $i$, hvor $x_i \neq 0$, sådan at 
 \begin{align*}
-c_1 \mathbf{u}_1 + c_2 \mathbf{u}_2 + \ldots + c_i \mathbf{u}_i = \mathbf{0}.
+x_1 \mathbf{u}_1 + x_2 \mathbf{u}_2 + \ldots + x_i \mathbf{u}_i = \mathbf{0}.
 \end{align*}
 %Synes det ovenstående lyder lidt mærkeligt (det med i, i og x_i). 
 Bemærk, at $i\geq2$, da udtrykket ellers ville blive reduceret til
 %
 \begin{align*}
-c_1\textbf{u}_1=\mathbf{0},
+x_1\textbf{u}_1=\mathbf{0},
 \end{align*}
 %
 hvilket går imod tidligere antagelser.
 Løses udtrykket i forhold til $\mathbf{u}_i$, ses det, at
 \begin{align*}
-\mathbf{u}_i = - \frac{c_1}{c_i} \mathbf{u}_1 - \frac{c_2}{c_i} \mathbf{u}_2 - \cdots - \frac{c_{i-1}}{c_i} \mathbf{u}_{i-1}.
+\mathbf{u}_i = - \frac{x_1}{x_i} \mathbf{u}_1 - \frac{x_2}{x_i} \mathbf{u}_2 - \cdots - \frac{x_{i-1}}{x_i} \mathbf{u}_{i-1}.
 \end{align*}
 Hvilket vil sige, at 
 \begin{align*}
@@ -207,17 +207,17 @@ Hvilket vil sige, at
 \end{align*}
 %
 Antag nu, at $\mathbf{u}_i \in \text{span}\{ \mathbf{u}_1,\mathbf{u}_2, \ldots ,\mathbf{u}_{i-1} \}$ for $i \geq 2$.
-Da $\text{span}\{ \mathbf{u}_1,\mathbf{u}_2, \ldots ,\mathbf{u}_{i-1} \}$ er mængden af alle linearkombinationer af vektorerne $\mathbf{u}_1,\mathbf{u}_2, \ldots ,\mathbf{u}_{i-1}$, eksisterer der skalarer $c_1, c_2, \ldots c_{i-1}$, således at
+Da $\text{span}\{ \mathbf{u}_1,\mathbf{u}_2, \ldots ,\mathbf{u}_{i-1} \}$ er mængden af alle linearkombinationer af vektorerne $\mathbf{u}_1,\mathbf{u}_2, \ldots ,\mathbf{u}_{i-1}$, eksisterer der skalarer $x_1, x_2, \ldots x_{i-1}$, således at
 %
 \begin{align*}
-\textbf{u}_i=c_1\mathbf{u}_1 + c_2 \mathbf{u}_2 + \cdots + c_{i-1}\mathbf{u}_{i-1}.
+\textbf{u}_i=x_1\mathbf{u}_1 + x_2 \mathbf{u}_2 + \cdots + x_{i-1}\mathbf{u}_{i-1}.
 \end{align*}
 %
 For $k \geq i$ haves, at $\mathbf{u}_1,\mathbf{u}_2, \ldots ,\mathbf{u}_k$ er lineært afhængig, da 
 \begin{align*}
-\textbf{u}_1 -c_1\textbf{u}_1 - c_2\textbf{u}_2 - \cdots - c_{i-1}\textbf{u}_{i-1} = \textbf{0}
+\textbf{u}_1 -x_1\textbf{u}_1 - x_2\textbf{u}_2 - \cdots - x_{i-1}\textbf{u}_{i-1} = \textbf{0}
 \end{align*} 
-er en løsning anderledes fra den trivielle løsning, hvor $c_1, c_2,\ldots,c_k=0$.
+er en løsning anderledes fra den trivielle løsning, hvor $x_1, x_2,\ldots,x_k=0$.
 %
 \end{proof}
 \\
@@ -318,9 +318,9 @@ x_1 & x_2 & x_3 & b \\
 \begin{blockarray}{cccc}
 x_1 & x_2 & x_3 & b \\
 \begin{block}{[ccc|c]}
-1 & \frac{-3}{4} & \frac{1}{4} & 0\\
-0 & 1 & -3 & 0\\
-0 & 0 & 1 & 0 \\
+\hlight{1} & \frac{-3}{4} & \frac{1}{4} & 0\\
+0 & \hlight{1} & -3 & 0\\
+0 & 0 & \hlight{1} & 0 \\
 \end{block}
 \end{blockarray} \\
 \xrightarrow[R_1 \rightarrow R_1+(-\frac{1}{4}R_3)]{R_2 \rightarrow R_2+3R_3} 
