--- a/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
@@ -115,7 +115,7 @@ $A$ er invertibel, hvis og kun hvis den reducerede trappeform af $A$ er $I_n$.
 \end{thm}
 %
 \begin{proof}
-Antag, at $n\times n$ matricen $A$ er invertibel, og at der findes en vektor \textbf{v} i $\R^n$, så $A\textbf{v}=\textbf{0}$. 
+Antag, at $n\times n$ matricen $A$ er invertibel, og at der findes en vektor \textbf{u} i $\R^n$, så $A\textbf{v}=\textbf{0}$. 
 Da $A$ er en invertibel matrix, gælder det for ethvert $\mathbf{b} \in \R^n$, at $A\textbf{x}=\mathbf{b}$ har løsningen $A^{-1}\mathbf{b}$ og derfor er $\textbf{v}=A^{-1}\textbf{0}=\textbf{0}$. 
 Den eneste løsning til problemet er derfor $\textbf{0}$. 
 Såfremt $A$ er invertibel, følger det derfor fra sætning \ref{thm:mxlinuaf}, at $\text{ rang}(A)=n$.
